--- a/front/index.html
+++ b/front/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-        <form>
+    <form>
 
-                <label>Select Image to Convert</label>
-                <input type="file" class="form-control" name="filename" accept="image/gif, image/jpeg, image/png" name="image" id="file"
-                    onchange="convert64(event)">
-        </form>
+        <label>Select Image to Convert</label>
+        <input type="file" class="form-control" name="filename" accept="image/gif, image/jpeg, image/png" name="image"
+            id="file" onchange="convert64(event)">
+    </form>
     </div>
     <div class="container" style="margin-top: 5%;">
         <div class="row">
@@ -37,13 +37,13 @@
     let surname;
     let sid;
     let imageString;
-    function input_name(event){
+    function input_name(event) {
         name = event.target.value;
     }
-    function input_surname(event){
+    function input_surname(event) {
         surname = event.target.value;
     }
-    function input_sid(event){
+    function input_sid(event) {
         sid = event.target.value;
     }
 
@@ -68,7 +68,7 @@
             "surname": "Doe",
             "numbers": [1, 2, 3, 4, 5]
         }
-        const request = await fetch("http://54.205.209.195:8080/process-image", {
+        const request = await fetch("http://54.205.209.195:8888/process-image", {
             method: 'POST',
             headers: {
                 "Content-Type": "application/json",
