--- a/front/index.html
+++ b/front/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SWDEV_Week9</title>
+    <title>Week9</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
     <form>
-
-        <label>Select Image to Convert</label>
+        <label>Select Image</label>
         <input type="file" class="form-control" name="filename" accept="image/gif, image/jpeg, image/png" name="image"
             id="file" onchange="convert64(event)">
     </form>
@@ -20,44 +19,29 @@
     <div class="container" style="margin-top: 5%;">
         <div class="row">
             <div class="col">
-                <img id="d-image">
+                <img id="before">
             </div>
             <div class="col" style="text-align: center; margin: auto;">
-                <button type="button" onclick="convert()">CONVERT</button>
+                <button type="button" onclick="convert()">convert</button>
             </div>
             <div class="col">
-                <img id="c-image">
+                <img id="converted">
             </div>
 
         </div>
     </div>
 </body>
 <script>
-    let name;
-    let surname;
-    let sid;
-    let imageString;
-    function input_name(event) {
-        name = event.target.value;
-    }
-    function input_surname(event) {
-        surname = event.target.value;
-    }
-    function input_sid(event) {
-        sid = event.target.value;
-    }
-
-    // add event listener to handle file selection
     function convert64(event) {
         const file = event.target.files[0];
         const reader = new FileReader();
         reader.addEventListener("load", function () {
             imageString = reader.result;
         });
-        let upload_image = document.getElementById('d-image');
+        let upload_image = document.getElementById('before');
         upload_image.src = URL.createObjectURL(event.target.files[0]);
-        document.getElementById("d-image").width = "400";
-        document.getElementById("d-image").height = "400";
+        document.getElementById("before").width = "400";
+        document.getElementById("before").height = "400";
         reader.readAsDataURL(file);
     }
 
@@ -76,9 +60,9 @@
             body: JSON.stringify(payloads),
         })
         const response = await request.json();
-        document.getElementById("c-image").src = response.processed_image
-        document.getElementById("c-image").width = "400";
-        document.getElementById("c-image").height = "400";
+        document.getElementById("converted").src = response.processed_image
+        document.getElementById("converted").width = "400";
+        document.getElementById("converted").height = "400";
     }
 
 </script>
