--- a/front/index.html
+++ b/front/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>dev commit and push sth</h1>
     <form>
         <label>Select Image</label>
         <input type="file" class="form-control" name="filename" accept="image/gif, image/jpeg, image/png" name="image"
@@ -52,7 +53,7 @@
             "surname": "Doe",
             "numbers": [1, 2, 3, 4, 5]
         }
-        const request = await fetch("http://54.205.209.195:8888/process-image", {
+        const request = await fetch("http://3.89.107.234:8888/process-image", {
             method: 'POST',
             headers: {
                 "Content-Type": "application/json",
