--- a/front/index.html
+++ b/front/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>dev commit and push sth</h1>
+    <h1>dev commit sth and push</h1>
     <form>
         <label>Select Image</label>
         <input type="file" class="form-control" name="filename" accept="image/gif, image/jpeg, image/png" name="image"
