--- a/front/index.html
+++ b/front/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <p>dev pushing</p>
     <form>
         <label>Select Image</label>
         <input type="file" class="form-control" name="filename" accept="image/gif, image/jpeg, image/png" name="image"
